--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,10 @@
 {
-    "java.project.referencedLibraries": {
-        "include": [
-            "lib/**/*.jar",
-            ".class/algs4.jar",
-            ".class/hamcrest-core-1.3.jar",
-            ".class/junit-4.13.2.jar",
-            ".class/stdlib.jar"
-        ],
-        "exclude": [
-            "d:\\Program Files\\Java\\my_class\\hamcrest-core-2.2.jar"
-        ]
-    },
-    "java.codeGeneration.generateComments": true
+    "java.project.sourcePaths": [
+        "."
+    ],
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "d:\\Program Files\\Java\\my_class\\hamcrest-core-1.3.jar",
+        "d:\\Program Files\\Java\\my_class\\junit-4.13.2.jar"
+    ]
 }
